--- a/auth/styles.css
+++ b/auth/styles.css
@@ -470,7 +470,7 @@ body {
   h4 {
     margin-top: 20px;
     font-size: 16px;
-    color: #5f4b8b;
+    color: white;
   }
   
   /* Стилизовані кнопки підтвердження */
